--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   soundpool: ^1.1.3
+  shared_preferences: ^0.5.12
 
 
   # The following adds the Cupertino Icons font to your application.
