--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,11 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
+  google_mobile_ads: ^0.11.0  
   soundpool: ^1.1.3
-  shared_preferences: ^0.5.12
+  shared_preferences: ^0.5.12  
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
