--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   soundpool: ^1.1.3
   shared_preferences: ^0.5.12
+  google_mobile_ads: ^0.11.0+4
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
