--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.12
   google_mobile_ads: ^0.11.0+4
   provider: ^4.3.3
+  vibration: ^1.7.3
 
 
   # The following adds the Cupertino Icons font to your application.
