--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
      - assets/sounds/
+     - assets/images/rice/
+     - assets/images/eggs/
+     - assets/images/groats/
+     - assets/images/pasta/
+     - assets/images/potatoes/
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
